# Titan_IBKR

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  IC Signal improved.md  MTF backtesting feedback.md  ORB_User_Manual.md  README.md  Titan Workspace Rules.md  USER_GUIDE.md  docker-compose.yml  download_sp100.py  error.txt  error2.txt  error3.txt  error4.txt  orb_results.txt  pyproject.toml  ruff_errors.txt  tests_output.txt  titan-orchestrator-skill.md
.claude/: settings.json  settings.local.json
config/: bond_gold.toml  bond_gold_v36.toml  etf_trend_dbc.toml  etf_trend_efa.toml  etf_trend_gld.toml  etf_trend_iwb.toml  etf_trend_qqq.toml  etf_trend_spy.toml  etf_trend_tqqq.toml  eurchf_h1_mr.toml  eurusd_h1_mr.toml  eurusd_mr.toml  fx_carry_audjpy.toml  gap_fade_eurusd.toml  gem_voltarget_lev2.toml  gem_voltarget_lev2_j5.toml  gld_confluence.toml  gold_macro_gld.toml  ic_census_audjpy_vwap_fine.toml  ic_census_universe.toml  ic_census_universe_confluence.toml  ic_census_universe_mtf_lift.toml  ic_census_universe_phase_b.toml  ic_census_universe_phase_c.toml  ic_generic.toml  ic_mtf.toml  instruments.toml  ml_stacking_iwb.toml  ml_stacking_qqq_spy.toml  mr_audjpy.toml  mr_fx_eurusd.toml  mtf.toml  mtf_audjpy.toml  mtf_audusd.toml  mtf_eurusd.toml  mtf_gbpusd.toml  mtf_usdchf.toml  mtf_usdjpy.toml  orb_live.toml  pairs_gld_efa.toml  (+5 more)
data/: i1v2_c6_frozen.json
directives/: Alpha Research Loop (VectorBT).md  Autonomous Loop 2026-04-21.md  Autoresearch Agent Loop 2026-04-21.md  Autoresearch Post-Remediation 2026-04-21.md  B2e Sweep Report 2026-05-17.md  Backtesting & Validation.md  Bond-Equity Audit DSR-Sanctuary 2026-05-14.md  Broker Migration Assessment.md  Bulk-Retire etf_trend Unleveraged Variants 2026-05-16.md  Candidate Portfolio 2026-04-21.md  Capital Flow Architecture 2026-05-17.md  Cost Model Audit 2026-05-11.md  Data Acquisition Wave 2026-05-17.md  Deployment & Operations.md  (+103 more)
(+725 files in other folders)
